Refactor tag mastery math: Anchored priors, anti-farming logic, and dynamic LCB